Added some debugging tools, restricted channels shown to user.

--- a/sample.env
+++ b/sample.env
@@ -2,3 +2,4 @@ DISCORD_TOKEN=
 TELEGRAM_BOT_TOKEN=
 DEFAULT_GUILD=
 DEBUG_ID=<admin Telegram ID goes here>
+ALLOWED_CHANNEL_CATEGORIES="[<int>, <int>, <int>, ...]"
