--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,5 @@
 DISCORD_TOKEN=
 TELEGRAM_BOT_TOKEN=
 DEFAULT_GUILD=
-DEBUG_ID=<admin Telegram ID goes here>
+DEBUG_ID=<Telegram ID permissioned to call the /debug function (optional)>
 ALLOWED_CHANNEL_CATEGORIES="[<int>, <int>, <int>, ...]"
