Set up aws api gateway for Oauth2 Discord verification flow

--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,6 @@
 DISCORD_TOKEN=
 TELEGRAM_BOT_TOKEN=
 DEFAULT_GUILD=
-DEBUG_ID=<Telegram ID permissioned to call the /debug function (optional)>
 ALLOWED_CHANNEL_CATEGORIES="[<int>, <int>, <int>, ...]"
+OAUTH_REDIRECT_URI=<see readme>
+DEBUG_ID=<Telegram ID permissioned to call the /debug function (optional)>
