Implemented Oauth2 Discord verification (closes #46 )
most helpful resources for problem at hand (oauth2 & TG bots):

https://github.com/syntax/discord-oauth
https://stackoverflow.com/questions/37264827/telegram-bot-oauth-authorization https://discordjs.guide/oauth2/#getting-an-oauth2-url
https://www.oauth.com/oauth2-servers/redirect-uris/redirect-uri-registration/

--- a/sample.env
+++ b/sample.env
@@ -1,6 +1,8 @@
 DISCORD_TOKEN=
 TELEGRAM_BOT_TOKEN=
+OAUTH_DISCORD_CLIENT_ID=
+OAUTH_DISCORD_CLIENT_SECRET=
+OAUTH_REDIRECT_URI=
 DEFAULT_GUILD=
 ALLOWED_CHANNEL_CATEGORIES="[<int>, <int>, <int>, ...]"
-OAUTH_REDIRECT_URI=<see readme>
 DEBUG_ID=<Telegram ID permissioned to call the /debug function (optional)>
