--- a/sample.env
+++ b/sample.env
@@ -5,5 +5,6 @@ OAUTH_DISCORD_CLIENT_SECRET=
 OAUTH_REDIRECT_URI=
 DEFAULT_GUILD=
 ALLOWED_CHANNEL_CATEGORIES="[<int>, <int>, <int>, ...]"
-ROLES_EXEMPT_BY_DEFAULT="[<str(role.name)>, <str(role.name)>, ...]"
-DEBUG_ID=<Telegram ID permissioned to call the /debug function (optional)>
+ROLES_EXEMPT_BY_DEFAULT="[<role.name>, <role.name>, ...]"
+ALWAYS_ACTIVE_CHANNELS="[<channel.name>, <channel.name>, ...]"
+DEBUG_ID=<Telegram ID (int) permissioned to call the /debug function (optional)>
