--- a/sample.env
+++ b/sample.env
@@ -4,7 +4,7 @@ OAUTH_DISCORD_CLIENT_ID=
 OAUTH_DISCORD_CLIENT_SECRET=
 OAUTH_REDIRECT_URI=
 DEFAULT_GUILD=
-ALLOWED_CHANNEL_CATEGORIES="[<int>, <int>, <int>, ...]"
-ROLES_EXEMPT_BY_DEFAULT="["<role.name>", "<role.name>", ...]"
-ALWAYS_ACTIVE_CHANNELS="[<channel.id>, <channel.id>, ...]"
+ALLOWED_CHANNEL_CATEGORIES='[<int>, <int>, <int>, ...]'
+ROLES_EXEMPT_BY_DEFAULT='["<role.name>", "<role.name>", ...]'
+ALWAYS_ACTIVE_CHANNELS='[<channel.id>, <channel.id>, ...]'
 DEBUG_ID=<Telegram ID (int) permissioned to call the /debug function (optional)>
